--- a/style.css
+++ b/style.css
@@ -2,74 +2,165 @@
 
 body {
     background-color: #1F2937;
-}
-
-.nav {
-    font-size: 20px;
-    color: #F9FAF8;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav-right {
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
-}
-
-#about {
-    align-items: center;
+    padding: 0;
+    margin: 0;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
-.about {
-    font-style: bold;
-    font-size: 48px;
-    font-family: 'Roboto', Arial, sans-serif;
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar {
+    display: flex;
     color: #F9FAF8;
+    background-color: #1F2937;
+    padding: 20px 0px 20px 100px;
+    align-items: center;
 }
 
-p {
+.nav-links {
+    display: flex;
+    margin-left: auto;
+    padding: 0px 100px 0px 0px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: #E5E7EB;
     font-size: 18px;
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
 }
 
-.image-placeholder {
-    border: 2px solid #1F2937;
-    width: 455px;
+.hero {
+    display: flex;
+    color: #F9FAF8;
+    background-color: #1F2937;
+    align-items: center;
+    justify-content: center;
+    padding: 90px;
+}
+
+.hero-1 {
+    flex-basis: 400px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin: 50px;
+}
+
+.hero-1 p {
+    font-family: 'Roboto', sans-serif;
+    opacity: 0.7;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+.hero button {
+    display: block;
+    text-align: center;
+    width: 110px;
+    border: none;
+    background: #3882F6;
+    padding: 10px;
+    border-radius: 10px;
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.hero-image {
+    width: 500px;
     height: auto;
 }
 
-.button {
-    background-color: #3882F6;
+.hero-content {
+    align-items: center;
+    background-color: #E5E7EB;
 }
 
-.information {
-    background-color: white;
-    font-size: 17px;
-    border: white;
-    border-left: white;
-    border-spacing: 10px;
-}
-
-.info-des {
+.hero-content h2 {
     text-align: center;
+    color: #1F2937;
     font-size: 36px;
 }
 
-figure {
-    text-align: center;
-    text-overflow: normal;
-}
-
-.gallery {
+.hero-content-info {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 25vw);
-    grid-gap: 15px;
+}
+
+.hero-content-info p {
+    text-align: center;
+    
+}
+
+.hero-content img {
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+    border: 4px solid #1F2937;
+    border-radius: 15px;
+    margin: 5px 20px 0px 20px;
 }
 
 .quote {
-    background-color: #E5E7EB;
-    font-size: 36px;
-    text-align: center;
-    text-overflow: normal;
+    display: flex;
+    flex-direction: column;
+    background-color: #bebfc2;
+    padding: 0 200px;
+}
+
+.sign-up {
+    background-color: #3882F6;
+    margin: 50px 200px;
+    padding: 10px 80px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    border-color: none;
+}
+
+.sign-up-text {
+    flex: 1;
+    text-align: left;
+}
+
+.sign-up-text p {
+    color: #FFF;
+    opacity: 0.7;
+    margin: 5px 30px 30px 50px;
+}
+
+h3 {
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 30px 0px 0px 50px;
+}
+
+.sign-up-button {
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+    border-color: #FFF;
+    border-radius: 10px;
+    background-color: #3882F6;
+    padding: 5px 25px;
+    font-size: 15px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
 }
